# dotfiles

./: .envrc  .gitignore  .sops.yaml  LICENSE  README.md  flake.nix  secrets.yaml  shell.nix  update.sh
example/: flake.nix
example/overlays/: default.nix
example/secrets/: secrets.yaml
home/features/: automount.nix  cli-packages.nix  firefox.nix  fonts.nix  git.nix  gui-packages.nix  nix.nix  nvim.nix  pkgs_cli.nix  secrets.nix  tmux.nix  udiskie.nix  zsh.nix
home/haru02w/: acmesecurity.nix  qemu.nix  testvm.nix  tweety.nix  zephyrus.nix
home/segments/: pkgs_cli.nix  pkgs_gui.nix
hosts/inspiron/: pkgs.nix
hosts/vm/: default.nix
hosts/zephyrus/: default.nix  hardware-configuration.nix
lib/: default.nix
modules/home-manager/: default.nix  inputs.nix  profiles.nix  theme.nix  wallpaper.nix
modules/includes/: tokyo-stylix.nix
modules/nixos/: default.nix  home-manager.nix  inputs.nix  laptop.nix  main_user.nix  neovim.nix  profiles.nix  ssh.nix
modules/nixvim/: default.nix  keymaps.nix  options.nix  settings.nix
nixos/acmesecurity/: default.nix
nixos/common/: home-manager.nix  sops.nix
nixos/features/: fonts.nix  hm-module.nix  hyprland.nix  impermanence.nix  laptop.nix  main_user.nix  nix.nix  opengl.nix  quietboot.nix  security.nix  tuigreet.nix  user_haru02w.nix
nixos/qemu/: default.nix
nixos/segments/: fonts.nix  hm-module.nix  locale_n_timezone.nix  nix.nix  pipewire.nix
nixos/testvm/: default.nix  disko.nix  hardware-configuration.nix
nixos/tweety/: default.nix  hardware-configuration.nix  nfs-bkpsys.nix
nixos/users/: haru02w.nix  sakur42.nix
nixos/zephyrus/: default.nix  disko.nix  hardware-configuration.nix  laptop.nix  nvidia.nix
overlays/: default.nix
pkgs/: default.nix
pkgs/nixvim/: default.nix  keymaps.nix  options.nix  settings.nix
secrets/: accounts.yaml  secrets.yaml  ssh-keys.yaml
segments/nixos/: security.nix
system/: shared.nix
system/shared/: default.nix  desktop.nix  security.nix
templates/: README.md  default.nix
templates/c/: CMakeLists.txt  compile.sh  flake.nix  package.nix  shell.nix
templates/c/src/: example.c  main.c
templates/cpp/: .clang-format  .clang-tidy  CMakeLists.txt  default.nix  flake.nix  shell.nix
templates/python/: flake.nix  package.nix  pyproject.toml  shell.nix
templates/python/src/: main.py  setup.py
templates/python_cuda/: flake.nix  shell.nix
templates/rust/: Cargo.toml  default.nix  flake.nix
(+317 files in other folders)
